packages/css/src/pages/employee/index.scss
/* TODO: convert using tailwind */
.employee {
  .card-home {
    font-size: 16px;
    padding: 0 0 16px 0;
    width: 270px;
    display: inline-block;
    margin-right: 16px;
    margin-bottom: 16px;
  }
  .topbar {
    position: fixed;
    top: 0;
    width: 100%;
    padding: 16px 24px;
    background: white;
    box-shadow: rgba(0, 0, 0, 0.24) 0 1px 4px;
    z-index: 9999;

    img {
      display: inline;

      &.city {
        margin-right: 8px;
        height: 48px;
        width: 48px;
      }

      &.state {
        height: 20px;
        max-height: 20px;
        width: auto;
      }
    }

    .ulb {
      font-weight: bold;
    }

    .right {
      float: right;
      margin-top: 12px;

      .user-img-txt {
        background: #f47738;
        padding: 10px 15px;
        border-radius: 50%;
        color: white;
        font-weight: 700;
      }
    }
  }

  .main {
    padding-top: 88px;
  }
}

.citizen {
  .main {
    padding-top: 82px;
  }
}

.citizen,
.employee {
  .sidebar {
    position: fixed;
    left: 0;
    padding: 20px 0;
    background: #22394d;
    height: 100%;
    color: white;
    margin-top: 80px;
    z-index: 1000;

    .actions {
      cursor: pointer;
      padding: 0 20px;
      margin-bottom: 32px;

      &.active {
        border-right: 4px solid #f47738;
        padding-right: 16px;
      }
    }
  }
}

.citizen {
  .sidebar {
    margin-top: 54px;
    min-width: 200px;
    .actions {
      display: flex;
      align-items: center;
      gap: 10px;
    }
  }
}

.link {
  @apply text-link-normal;

  :hover {
    color: #003078;
  }
}

@media (min-width: 640px) {
  .employee {
    .main {
      padding-top: 80px;
      margin-left: 88px;
    }
  }

  .citizen {
    .main {
      display: flex;
      gap: 0.3rem;
      width: calc(100vw - 210px);
      padding-top: 80px;
      margin-left: 210px;
    }
  }
}

.multi-select-container {
  .disposal-text {
    @apply font-bold;
  }

  .disposal-info {
    @apply my-md ml-sm;
  }

  .disposal-action-bar {
    @apply flex justify-between items-center;
  }
}

